# x-trading-agents

./: .gitignore  Makefile  README.local.md  README.public.md  docker-compose.yml  main.py  pyproject.toml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: config.py  db.py  main.py
apps/api/app/routes/: attribution.py  backtest.py  batch.py  costs.py  holdings.py  insider.py  markets.py  ohlc.py  portfolio.py  reflection.py  runs.py  safety.py  schedules.py  screener.py  trades.py
apps/api/app/services/: alpaca_client.py  attribution.py  auto_kill.py  backtest.py  company.py  cost_tracking.py  financial_datasets.py  holdings.py  insider.py  news.py  order_manager.py  rate_limit.py  risk.py  run_manager.py  scheduler.py  screener.py  snapshots.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AddHoldingDialog.tsx  AddMarketDialog.tsx  AttributionPanel.tsx  BatchAnalyzeDialog.tsx  CompanyProfile.tsx  EarningsWidget.tsx  HeatmapWidget.tsx  InsiderWidget.tsx  LightweightChart.tsx  MarketsWidget.tsx  MobileNav.tsx  Nav.tsx  NewsWidget.tsx  (+11 more)
scripts/: poc_agent_sdk_trader.py
tradingagents/: default_config.py
tradingagents/agents/analysts/: news_analyst.py  sdk_analysts.py
tradingagents/agents/utils/: agent_utils.py  news_data_tools.py
tradingagents/dataflows/: capitol_trades_scraper.py  congress_trades.py  y_finance.py
tradingagents/graph/: setup.py  trading_graph.py
tradingagents/llm_clients/: agent_sdk_client.py  anthropic_client.py
(+19 files in other folders)
