[project]
name = "trading-agents-api"
version = "0.1.0"
description = "FastAPI service wrapping TradingAgentsGraph + Alpaca execution"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.1",
    "alpaca-py>=0.43.4",
    "httpx>=0.27.0",
    "tradingagents",
    "apscheduler>=3.11.2",
    "scrapling>=0.2",
]

[tool.uv.sources]
tradingagents = { path = "../..", editable = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
